<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
	android:orderInCategory="1"
	android:id="@+id/grouplist_menu_getall" 
	android:icon="@android:drawable/ic_menu_set_as"
	/>
	
	<item
	android:orderInCategory="2"
	android:id="@+id/grouplist_menu_addgroups" 
	android:icon="@android:drawable/ic_menu_add"
	android:title="@string/grouplist_add_groups"/>
	
	<item
	android:orderInCategory="3"
	android:id="@+id/grouplist_menu_offline"
	android:title="@string/grouplist_set_offline"/>

	<item
	android:orderInCategory="4"
	android:id="@+id/grouplist_menu_quickhelp"
	android:icon="@android:drawable/ic_menu_help"
	android:title="@string/show_help"/>
	 
	<item
	android:orderInCategory="5"
	android:id="@+id/grouplist_menu_settings" 
	android:icon="@android:drawable/ic_menu_preferences"
	android:title="@string/global_settings"/>

	<item
	android:orderInCategory="6"
	android:icon="@android:drawable/ic_menu_close_clear_cancel"
	android:id="@+id/grouplist_menu_expire_messages" android:title="@string/expire_messages"/>
	
	<item
	android:orderInCategory="7"
	android:icon="@android:drawable/ic_menu_set_as"
	android:id="@+id/grouplist_get_latest" android:title="@string/getlatest_all"/>
	
	<item
	android:orderInCategory="8"
	android:icon="@android:drawable/ic_media_ff"
	android:id="@+id/grouplist_catchup_server_all" android:title="@string/catchup_menu_all"/>
	
	
</menu>
