<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom"
    android:cacheColorHint="#00000000"
    android:padding="0px"
    >

	<TextView
		android:id="@+id/topbar"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:textAppearance="?android:attr/textAppearanceLarge"
  		android:singleLine="true"
  		android:text="@string/msglist_group_list"
  		android:textColor="#ffffffff"
  		android:background="@drawable/solid_blue"
  		android:padding="0px"
  		android:paddingBottom="3px"
  		android:gravity="center_horizontal"
	/>	


	<ListView
		android:id="@+id/list_groups"
		android:layout_width="fill_parent"		
        android:layout_weight="1"		
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="3px"
		/>

	<!--  Layout horizontal para los botones -->
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="0.05" 
		android:padding="3px"
		>
			
		<Button
			android:id="@+id/btn_add"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/grouplist_add_groups"			
			android:layout_weight="1"
		/>
		<Button
			android:id="@+id/btn_settings"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"			
			android:text="@string/global_settings"	
			android:layout_weight="1"
		/>		
	</LinearLayout>


</LinearLayout>
